@@ -50,6 +50,7 @@ Bug fixes
  * Fixed incorrect z-index on userbar causing it to appear behind page content (Stein Strindhaug)
  * Form submissions pagination no longer looses date filter when changing page (Bertrand Bordage)
  * PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
+ * ``FormSubmissionsPanel`` now recognises custom form submission classes (LB (Ben Johnston))
 
 
 Upgrade considerations
